update post: [kotlin-stdlib]reduce

--- a/clqw2n819000208l58zn1ecxa.md
+++ b/clqw2n819000208l58zn1ecxa.md
@@ -1,8 +1,8 @@
 ---
-title: "[Kotlin]reduce"
+title: "[kotlin-stdlib]reduce"
 datePublished: Tue Jan 02 2024 08:12:27 GMT+0000 (Coordinated Universal Time)
 cuid: clqw2n819000208l58zn1ecxa
-slug: kotlinreduce
+slug: kotlin-stdlibreduce
 
 ---
 
@@ -71,3 +71,8 @@ println(strings.reduceIndexed { index, acc, string -> acc + string + index }) //
 * DoubleArray
     
 * CharArray
+    
+
+# References
+
+[https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/average.html](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/average.html)
