update post: [kotlin-stdlib]reduce

--- a/clqw2n819000208l58zn1ecxa.md
+++ b/clqw2n819000208l58zn1ecxa.md
@@ -6,9 +6,11 @@ slug: kotlin-stdlibreduce
 
 ---
 
-# Operation
+# Summary
 
-function that takes current accumulator value and an element, and calculates the next accumulator value.
+Accumulates value starting with the first element and applying [operation](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/reduce.html#kotlin.collections$reduce(kotlin.Array((kotlin.collections.reduce.T)),%20kotlin.Function2((kotlin.collections.reduce.S,%20kotlin.collections.reduce.T,%20)))/operation) from left to right to current accumulator value and each element.
+
+`operation` - function that takes current accumulator value and an element, and calculates the next accumulator value.
 
 ```kotlin
 inline fun <S, T : S> Iterable<T>.reduce(
