update post: [kotlin-stdlib]reduce

--- a/clqw2n819000208l58zn1ecxa.md
+++ b/clqw2n819000208l58zn1ecxa.md
@@ -10,6 +10,8 @@ slug: kotlin-stdlibreduce
 
 Accumulates value starting with the first element and applying [operation](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/reduce.html#kotlin.collections$reduce(kotlin.Array((kotlin.collections.reduce.T)),%20kotlin.Function2((kotlin.collections.reduce.S,%20kotlin.collections.reduce.T,%20)))/operation) from left to right to current accumulator value and each element.
 
+### Parameters
+
 `operation` - function that takes current accumulator value and an element, and calculates the next accumulator value.
 
 ```kotlin
