update post: [Docs Review]ViewModel overview

--- a/clr06rr4y000008lb5adk9b21.md
+++ b/clr06rr4y000008lb5adk9b21.md
@@ -217,7 +217,7 @@ class MyViewModel(
 
 The following are several key best practices you should follow when implementing ViewModel:
 
-* **Because of their scoping, use ViewModels as implementation details of a screen level state holder. Don't use them as state holders of reusable UI components such as chip groups or forms. Otherwise, you'd get the same ViewModel instance in different usages of the same UI component under the same ViewModelStoreOwner.**
+* **Because of their scoping, use ViewModels as implementation details of a screen level state holder. <mark>Use at screen level, Don't use them as state holders of reusable UI components such as chip groups or forms.</mark> Otherwise, you'd get the same ViewModel instance in different usages of the same UI component under the same ViewModelStoreOwner.**
     
 * ViewModels shouldn't know about the UI implementation details. Keep the names of the methods the ViewModel API exposes and those of the UI state fields as generic as possible. In this way, your ViewModel can accommodate any type of UI: a mobile phone, foldable, tablet, or even a Chromebook!
     
