update post: [Docs Review]ViewModel overview

--- a/clr06rr4y000008lb5adk9b21.md
+++ b/clr06rr4y000008lb5adk9b21.md
@@ -217,13 +217,13 @@ class MyViewModel(
 
 The following are several key best practices you should follow when implementing ViewModel:
 
-* **Because of their scoping, use ViewModels as implementation details of a screen level state holder. <mark>Use at screen level, Don't use them as state holders of reusable UI components such as chip groups or forms.</mark> Otherwise, you'd get the same ViewModel instance in different usages of the same UI component under the same ViewModelStoreOwner.**
+* **Use at screen level:** Because of their scoping, use ViewModels as implementation details of a screen level state holder. Don't use them as state holders of reusable UI components such as chip groups or forms. Otherwise, you'd get the same ViewModel instance in different usages of the same UI component under the same ViewModelStoreOwner.
     
-* ViewModels shouldn't know about the UI implementation details. Keep the names of the methods the ViewModel API exposes and those of the UI state fields as generic as possible. In this way, your ViewModel can accommodate any type of UI: a mobile phone, foldable, tablet, or even a Chromebook!
+* **Generic at accommodate any UI**: ViewModels shouldn't know about the UI implementation details. Keep the names of the methods the ViewModel API exposes and those of the UI state fields as generic as possible. In this way, your ViewModel can accommodate any type of UI: a mobile phone, foldable, tablet, or even a Chromebook!
     
-* As they can potentially live longer than the `ViewModelStoreOwner`, ViewModels shouldn't hold any references of lifecycle-related APIs such as the `Context` or `Resources` to prevent memory leaks.
+* **Don't hold references of lifecycle-related APIs**: As they can potentially live longer than the `ViewModelStoreOwner`, ViewModels shouldn't hold any references of lifecycle-related APIs such as the `Context` or `Resources` to prevent memory leaks.
     
-* Don't pass ViewModels to other classes, functions or other UI components. Because the platform manages them, you should keep them as close to it as you can. Close to your Activity, fragment, or screen level composable function. This prevents lower level components from accessing more data and logic than they need.
+* **Don't pass them around**: Don't pass ViewModels to other classes, functions or other UI components. Because the platform manages them, you should keep them as close to it as you can. Close to your Activity, fragment, or screen level composable function. This prevents lower level components from accessing more data and logic than they need.
     
 
 # Further information
