update post: [Doc Review]The activity lifecycle

--- a/clqnk4rfa000008l7b87428t9.md
+++ b/clqnk4rfa000008l7b87428t9.md
@@ -1,8 +1,8 @@
 ---
-title: "[Docs Review]The activity lifecycle"
+title: "[Doc Review]The activity lifecycle"
 datePublished: Wed Dec 27 2023 09:12:03 GMT+0000 (Coordinated Universal Time)
 cuid: clqnk4rfa000008l7b87428t9
-slug: docs-reviewthe-activity-lifecycle
+slug: doc-reviewthe-activity-lifecycle
 
 ---
 
