--- a/clr5p4wga000209l70iyj970e.md
+++ b/clr5p4wga000209l70iyj970e.md
@@ -1,8 +1,8 @@
 ---
-title: "[Docs Review]Delegated properties"
+title: "[Doc Review]Delegated properties"
 datePublished: Tue Jan 09 2024 01:51:59 GMT+0000 (Coordinated Universal Time)
 cuid: clr5p4wga000209l70iyj970e
-slug: docs-reviewdelegated-properties
+slug: doc-reviewdelegated-properties
 
 ---
 
