update post: [OpenSource]Image Picker Android library 배포하기(5)

--- a/clwg3jn12000u0ak1657y6u60.md
+++ b/clwg3jn12000u0ak1657y6u60.md
@@ -326,7 +326,7 @@ class CustomLayoutManager(context: Context) : LinearLayoutManager(context) {
 
 ### 마무으리...(회고)
 
-이렇게 수 만개의 데이터 클래스를 다루는 것에 대한 메모리적 염려와 그 이미지를 로드하는데 있어 사용자 경험을 저해하는 요소들을 개선하려는 각고의 노력을 해봤다.
+이렇게 수 만개의 데이터 클래스를 다루는 것에 대한 메모리 수준의 염려(슬랙 코틀린 커뮤니티에서 답변달아주신 외국인 분들께 감사드린다.)와 그 이미지를 로드하는데 있어 사용자 경험을 저해하는 요소들을 개선하려는 각고의 노력을 해봤다.
 
 (여전히 이미지 목록을 다루는 방식을 개선할 필요가 있다고 생각한다. 고민해 둔 방법이 있어 이후 버전에서 적용해 볼 생각이다 그리고 ItemView의 상태 변화 로직도 개선할 생각이다. Glide가 적용된 View가 padding이 적용되면 깜박임이 생긴다. 해결 방법도 생각해 뒀다.)
 
