--- a/clwg3jn12000u0ak1657y6u60.md
+++ b/clwg3jn12000u0ak1657y6u60.md
@@ -338,11 +338,11 @@ class CustomLayoutManager(context: Context) : LinearLayoutManager(context) {
     
 * 간결하고 직관적인 코드 구현(PermissionRequester 구현, MVI 패턴 사용)
     
-* 커스텀 뷰 구현 방법(ListAdapter 내 로직을 간결하게 하기 위한 LinearLayout을 확장한 CustomItemView
+* 커스텀 뷰 구현 방법(ListAdapter 내 로직을 간결하게 하기 위한 LinearLayout을 확장한 CustomItemView)
     
 * 안드로이드 라이브러리 배포 방법(Jitpack을 통한 라이브러리 배포)
     
-* 라이브러리 api 제공을 위한 로직 구현 방법(Build 패턴, Fragment 초기화 문제)
+* 라이브러리 api 제공을 위한 로직 구현 방법(Builder 패턴, Fragment 초기화 문제)
     
 * 메모리 수준의 고민(수 만개 데이터 처리 시 메모리에 가용되는 용량 수준 확인)
     
