--- a/clqw2n819000208l58zn1ecxa.md
+++ b/clqw2n819000208l58zn1ecxa.md
@@ -3,6 +3,7 @@ title: "[Doc Review]reduce"
 datePublished: Tue Jan 02 2024 08:12:27 GMT+0000 (Coordinated Universal Time)
 cuid: clqw2n819000208l58zn1ecxa
 slug: kotlin-stdlibreduce
+tags: kotlin
 
 ---
 
