update post: [Doc Review]ViewModel overview

--- a/clr06rr4y000008lb5adk9b21.md
+++ b/clr06rr4y000008lb5adk9b21.md
@@ -3,6 +3,7 @@ title: "[Doc Review]ViewModel overview"
 datePublished: Fri Jan 05 2024 05:19:01 GMT+0000 (Coordinated Universal Time)
 cuid: clr06rr4y000008lb5adk9b21
 slug: docs-reviewviewmodel-overview
+tags: kotlin
 
 ---
 
