--- a/clr5p4wga000209l70iyj970e.md
+++ b/clr5p4wga000209l70iyj970e.md
@@ -3,6 +3,7 @@ title: "[Doc Review]Delegated properties"
 datePublished: Tue Jan 09 2024 01:51:59 GMT+0000 (Coordinated Universal Time)
 cuid: clr5p4wga000209l70iyj970e
 slug: doc-reviewdelegated-properties
+tags: kotlin
 
 ---
 
