update post: [Android Library]Image Picker Android library 배포하기(5)

--- a/clwg3jn12000u0ak1657y6u60.md
+++ b/clwg3jn12000u0ak1657y6u60.md
@@ -1,5 +1,5 @@
 ---
-title: "[OpenSource]Image Picker Android library 배포하기(5)"
+title: "[Android Library]Image Picker Android library 배포하기(5)"
 datePublished: Tue May 21 2024 07:51:34 GMT+0000 (Coordinated Universal Time)
 cuid: clwg3jn12000u0ak1657y6u60
 slug: opensourceimage-picker-android-library-5
